@@ -38,13 +38,6 @@ A list of all bugs open for the next v3.0.2 release can be found at
 
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
 
-  *) test: tests failing on some Debian sid and Solaris
-   Trunk patches: http://svn.apache.org/viewvc?rev=1171365&view=rev
-   Jira: https://issues.apache.org/jira/browse/TS-969
-   +1: igalic, zym, zwoop
-   +0: jim (patch looks good but cannot test)
-   zwoop says: Seems harmless to me, since it's in regression only.
-
   *) Build: Allow for our default -O3 options to be overriden via CFLAGS/CXXFLAGS
    Trunk patches: http://svn.apache.org/viewvc?rev=1175914&view=rev
    Jira: https://issues.apache.org/jira/browse/TS-967
